almost working rest assured